@@ -1464,7 +1464,7 @@ void CUtil::GetAlbumThumb(const CStdString& strAlbumName, const CStdString& strF
 }
 
 
-bool CUtil::GetXBEIcon(const CStdString& strFilePath, CStdString& strIcon)
+bool CUtil::CacheXBEIcon(const CStdString& strFilePath, const CStdString& strIcon)
 {
   // extract icon from .xbe
   CStdString localFile;
@@ -1472,10 +1472,7 @@ bool CUtil::GetXBEIcon(const CStdString& strFilePath, CStdString& strIcon)
   CXBE xbeReader;
   ::DeleteFile("T:\\1.xpr");
   if (!xbeReader.ExtractIcon(localFile, "T:\\1.xpr"))
-  {
-	  strIcon = "defaultProgramBig.png";
-    return true;
-  }
+    return false;
 
   bool success(false);
   CXBPackedResource* pPackedResource = new CXBPackedResource();
